--- a/api/Pipfile
+++ b/api/Pipfile
@@ -4,7 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "==1.1.2"
+flask = "*"
+requests = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
